// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders Accordion with closed state correctly 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingLeft": 28,
        "paddingRight": 31,
        "paddingTop": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#484848",
          "fontSize": 15,
        }
      }
    >
      Accordion
    </Text>
    <View
      animatedStyle={
        {
          "value": {
            "transform": [
              {
                "rotateZ": "0deg",
              },
            ],
          },
        }
      }
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
    >
      <Text />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#efefef",
        "height": 1,
        "width": "100%",
      }
    }
  />
  <View
    animatedStyle={
      {
        "value": {
          "height": 0,
          "overflow": "hidden",
        },
      }
    }
    collapsable={false}
    style={
      {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Accordion renders Accordion with opened state correctly 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingLeft": 28,
        "paddingRight": 31,
        "paddingTop": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#484848",
          "fontSize": 15,
        }
      }
    >
      Accordion
    </Text>
    <View
      animatedStyle={
        {
          "value": {
            "transform": [
              {
                "rotateZ": "0deg",
              },
            ],
          },
        }
      }
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "black",
              "fontSize": 24,
            },
            undefined,
            {
              "fontFamily": "entypo",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#efefef",
        "height": 1,
        "width": "100%",
      }
    }
  />
  <View
    animatedStyle={
      {
        "value": {
          "height": 0,
          "overflow": "hidden",
        },
      }
    }
    collapsable={false}
    style={
      {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 750,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "height": 50,
              "paddingBottom": 16,
              "paddingLeft": 36,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#484848",
                "fontSize": 15,
              }
            }
          >
            AccordionItem
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#efefef",
              "height": 1,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
